# weather-app-2

./: .gitignore  CMakeLists.txt  README.md  UseImGui.cpp  UseImGui.h  main.cpp  vcpkg.json
api/: GeoLocation.cpp  SensorsData.cpp  SensorsData.h  StationData.cpp  StationData.h
docs/: Doxyfile
docs/html/: SensorsData_8h.html  SensorsData_8h.js  SensorsData_8h_source.html  StationData_8cpp.html  StationData_8cpp.js  StationData_8h.html  StationData_8h.js  StationData_8h_source.html  UseImGui_8cpp.html  UseImGui_8h.html  UseImGui_8h.js  UseImGui_8h_source.html  annotated.html  annotated_dup.js  classCustomImGui-members.html  classCustomImGui.html  classCustomImGui.js  classSensorsData-members.html  classSensorsData.html  classSensorsData.js  classStationData-members.html  classStationData.html  classStationData.js  classUseImGui-members.html  classUseImGui.html  classUseImGui.js  classes.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  dir_0188a3e6da905bc60aceb35bf790b8c9.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  (+14 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js
docs/latex/: SensorsData_8h.tex  SensorsData_8h_source.tex  StationData_8cpp.tex  StationData_8h.tex  StationData_8h_source.tex  UseImGui_8cpp.tex  UseImGui_8h.tex  UseImGui_8h_source.tex  annotated.tex  classCustomImGui.eps  classCustomImGui.tex  classSensorsData.tex  classStationData.tex  classUseImGui.eps  classUseImGui.tex  files.tex  hierarchy.tex  index.tex  refman.tex  structSensorsData_1_1Sensor.tex  structSensorsData_1_1SensorValue.tex  structStationData_1_1GeoCoordinates.tex  structStationData_1_1Station.tex
tests/: TestCalculateDistance.cpp  TestGeocodeAddress.cpp
